<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, ContactsDemoActivity!</string>
	<string name="app_name">LoginDatabaseDemo</string>

	<string name="username">Username:</string>
	<string name="pwd">Password:</string>
	<string name="name">Name:</string>
	<string name="phone">Phone:</string>
	<string name="email">Email Id:</string>
	<string name="login">LOGIN</string>
	<string name="save">SAVE</string>
	<string name="logout">LOGOUT</string>
	<string name="reset">RESET</string>
	<string name="register">REGISTER</string>
</resources>
