<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:gravity="center" android:layout_width="fill_parent"
		android:layout_margin="10dip" android:layout_height="fill_parent"
		android:stretchColumns="1">
		<TableRow>
			<TextView android:layout_width="wrap_content"
				android:textStyle="bold" android:textColor="#ffffff"
				android:layout_height="wrap_content" android:text="@string/email" />
			<EditText android:layout_width="fill_parent" android:singleLine="true" android:id="@+id/emailET"
				android:layout_height="wrap_content" android:text="" />
		</TableRow>

		<TableRow>
			<TextView android:layout_width="fill_parent"
				android:textStyle="bold" android:textColor="#ffffff"
				android:layout_height="wrap_content" android:text="@string/pwd" />
			<EditText android:layout_width="fill_parent"
				android:inputType="textPassword" android:id="@+id/pwdET"
				android:layout_height="wrap_content" android:text="" />
		</TableRow>

	</TableLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="wrap_content"
		android:layout_gravity="center_horizontal" android:layout_height="wrap_content">
		<Button android:layout_width="wrap_content" android:id="@+id/login"
			android:padding="20dip" android:layout_height="wrap_content"
			android:text="@string/login" />

		<Button android:layout_width="wrap_content" android:id="@+id/reset"
			android:padding="21dip" android:layout_height="wrap_content"
			android:text="@string/reset" />

	</LinearLayout>

	<Button android:layout_width="wrap_content" android:id="@+id/register"
		android:layout_gravity="center_horizontal" android:padding="21dip"
		android:layout_marginTop="10dip" android:layout_height="wrap_content"
		android:text="@string/register" />
</LinearLayout>
