<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<TextView android:id="@+id/welcomeUser" android:layout_width="fill_parent"
		android:gravity="center_horizontal" android:textStyle="bold"
		android:textColor="#ffffff" android:layout_height="wrap_content"
		android:text="Welcome User..." />

	<TextView android:id="@+id/details" android:layout_width="fill_parent"
		android:gravity="center_horizontal" android:textStyle="bold"
		android:textColor="#ffffff" android:layout_height="wrap_content"
		android:text="The following are your Credentials" />

	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_margin="10dip"
		android:layout_height="fill_parent" android:stretchColumns="2">
		<TableRow android:weightSum="100">
			<TextView android:layout_width="wrap_content"
				android:layout_weight="40" android:textStyle="bold"
				android:textColor="#ffffff" android:layout_height="wrap_content"
				android:text="@string/name" />
			<TextView android:id="@+id/nameText" android:layout_width="wrap_content"
				android:gravity="right" android:textStyle="bold" android:textColor="#ffffff"
				android:layout_weight="60" android:layout_height="wrap_content"
				android:text="@string/name" />
		</TableRow>

		<TableRow android:weightSum="100">
			<TextView android:layout_width="wrap_content"
				android:layout_weight="40" android:textStyle="bold"
				android:textColor="#ffffff" android:layout_height="wrap_content"
				android:text="@string/phone" />
			<TextView android:id="@+id/phoneText" android:layout_width="wrap_content"
				android:gravity="right" android:textStyle="bold" android:textColor="#ffffff"
				android:layout_weight="60" android:layout_height="wrap_content"
				android:text="@string/email" />
		</TableRow>

		<TableRow android:weightSum="100">
			<TextView android:layout_width="wrap_content"
				android:layout_weight="40" android:textStyle="bold"
				android:textColor="#ffffff" android:layout_height="wrap_content"
				android:text="@string/email" />
			<TextView android:id="@+id/emailText" android:layout_width="wrap_content"
				android:gravity="right" android:textStyle="bold" android:textColor="#ffffff"
				android:layout_weight="60" android:layout_height="wrap_content"
				android:text="@string/email" />
		</TableRow>


	</TableLayout>


	<!-- <LinearLayout android:layout_width="fill_parent" -->
	<!-- android:orientation="vertical" android:layout_height="wrap_content" -->
	<!-- android:layout_margin="15dip"> -->

	<!-- <TextView android:id="@+id/nameText" android:layout_width="wrap_content" -->
	<!-- android:textStyle="bold" android:textColor="#ffffff" -->
	<!-- android:layout_height="wrap_content" android:text="@string/email" /> -->

	<!-- <TextView android:id="@+id/phoneText" android:layout_width="wrap_content" -->
	<!-- android:textStyle="bold" android:textColor="#ffffff" -->
	<!-- android:layout_height="wrap_content" android:text="@string/email" /> -->

	<!-- <TextView android:id="@+id/emailText" android:layout_width="wrap_content" -->
	<!-- android:textStyle="bold" android:textColor="#ffffff" -->
	<!-- android:layout_height="wrap_content" android:text="@string/email" /> -->

	<!-- </LinearLayout> -->

	<Button android:layout_width="wrap_content" android:id="@+id/logout"
		android:layout_gravity="center_horizontal" android:padding="21dip"
		android:layout_marginTop="10dip" android:layout_height="wrap_content"
		android:text="@string/logout" />
</LinearLayout>
